[package]
name = "gyre"
version = "0.6.1"
edition = "2024"
authors = ["Numeration<boxed87@outlook.com>"]
description = "A lock-free asynchronous ring buffer inspired by the LMAX Disruptor."
license-file = "LICENSE"
repository = "https://github.com/Numeration/gyre"
readme = "README.md"
documentation = "https://docs.rs/gyre"
keywords = ["lock-free", "async", "ring-buffer", "disruptor", "concurrency"]
categories = ["asynchronous", "data-structures"]

[dependencies]
crossbeam-utils = "0.8.21"
futures = "0.3.31"
papaya = "0.2.3"
pin-project = "1.1.10"
tokio = { version = "1.48.0", features = ["full"] }
