[package]
name = "gyre"
version = "1.0.0"
edition = "2024"
authors = ["Numeration<boxed87@outlook.com>"]
description = "A lock-free asynchronous ring buffer inspired by the LMAX Disruptor."
license-file = "LICENSE"
repository = "https://github.com/Numeration/gyre"
readme = "README.md"
documentation = "https://docs.rs/gyre"
keywords = ["lock-free", "async", "ring-buffer", "disruptor", "concurrency"]
categories = ["asynchronous", "data-structures"]

[dependencies]
crossbeam-utils = "0.8"
papaya = "0.2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time"] }
